--- a/app/src/main/res/layout/activity_pod_detalle.xml
+++ b/app/src/main/res/layout/activity_pod_detalle.xml
@@ -149,6 +149,15 @@
                         android:background="@drawable/rounded_button_gray"/>
 
                     <Button
+                        android:id="@+id/button_pod_detalle_terminar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15sp"
+                        android:text="TERMINAR"
+                        android:textColor="@color/colorWhite"
+                        android:background="@drawable/rounded_button_gray"/>
+
+                    <Button
                         android:id="@+id/button_pod_detalle_interrupcion"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
