--- a/app/src/main/res/layout/activity_pod_interrupcion_responsable.xml
+++ b/app/src/main/res/layout/activity_pod_interrupcion_responsable.xml
@@ -130,6 +130,7 @@ tools:context=".PodInterrupcionResponsableActivity">
                         android:textColor="@color/colorWhite"/>
 
                     <ListView
+                        android:id="@+id/listview_pod_interrupcion_responsable"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@color/colorWhite">
