--- a/app/src/main/res/layout/activity_pod.xml
+++ b/app/src/main/res/layout/activity_pod.xml
@@ -73,84 +73,87 @@
 
         </androidx.appcompat.widget.Toolbar>
 
+
         <EditText
-            android:id="@+id/edittext_pod_busqueda"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="@string/nombre_capataz"
-            android:textColorHint="@color/colorBlue"
-            android:textColor="@color/colorBlue"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:backgroundTint="@color/colorBlue"
-            android:focusable="true"
-            android:focusableInTouchMode="true"/>
+                android:id="@+id/edittext_pod_busqueda"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:hint="@string/nombre_capataz"
+                android:textColorHint="@color/colorBlue"
+                android:textColor="@color/colorBlue"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:backgroundTint="@color/colorBlue"
+                android:focusable="true"
+                android:focusableInTouchMode="true"/>
 
         <Spinner
-            android:id="@+id/spinner_pod_especialidad"
-            android:layout_width="match_parent"
-            android:layout_height="50sp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:textColor="@color/colorBlue"
-            android:backgroundTint="@color/colorBlue"
-            android:spinnerMode="dropdown" />
-
-        <Spinner
-            android:id="@+id/spinner_pod_area"
-            android:layout_width="match_parent"
-            android:layout_height="50sp"
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp"
-            android:textColor="@color/colorBlue"
-            android:backgroundTint="@color/colorBlue"
-            android:spinnerMode="dropdown" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-
-            android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginLeft="20dp">
-
-            <Spinner
-                android:id="@+id/spinner_pod_status"
-                android:layout_width="0dp"
+                android:id="@+id/spinner_pod_especialidad"
+                android:layout_width="match_parent"
                 android:layout_height="50sp"
-                android:layout_weight="1"
-
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
                 android:textColor="@color/colorBlue"
                 android:backgroundTint="@color/colorBlue"
                 android:spinnerMode="dropdown" />
 
-            <Button
-                android:id="@+id/button_pod_busqueda"
-
-                android:layout_width="50sp"
+        <Spinner
+                android:id="@+id/spinner_pod_area"
+                android:layout_width="match_parent"
                 android:layout_height="50sp"
-                android:layout_marginStart="20sp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:textColor="@color/colorBlue"
+                android:backgroundTint="@color/colorBlue"
+                android:spinnerMode="dropdown" />
 
-                android:background="@drawable/busqueda" />
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
 
-        </LinearLayout>
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp">
+
+                <Spinner
+                    android:id="@+id/spinner_pod_status"
+                    android:layout_width="0dp"
+                    android:layout_height="50sp"
+                    android:layout_weight="1"
+
+                    android:textColor="@color/colorBlue"
+                    android:backgroundTint="@color/colorBlue"
+                    android:spinnerMode="dropdown" />
+
+                <Button
+                    android:id="@+id/button_pod_busqueda"
+
+                    android:layout_width="50sp"
+                    android:layout_height="50sp"
+                    android:layout_marginStart="20sp"
+
+                    android:background="@drawable/busqueda" />
+
+            </LinearLayout>
 
         <ListView
-            android:id="@+id/listview_pod"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="10.0sp"/>
+                android:id="@+id/listview_pod"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="10.0sp"
+                android:scrollbars="none"/>
+
 
     </LinearLayout>
 
