--- a/app/src/main/res/layout/activity_pod_finalizar_tarea.xml
+++ b/app/src/main/res/layout/activity_pod_finalizar_tarea.xml
@@ -87,23 +87,14 @@
                 android:layout_marginLeft="20dp"
                 android:background="@drawable/rounded_button_blue">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
+                    android:text="@string/progreso"
+                    android:textSize="18sp"
+                    android:textColor="@color/colorWhite"
                     android:layout_marginTop="15sp"
-                    android:layout_marginLeft="15sp"
-                    android:layout_marginRight="15sp">
-
-                    <Switch
-                        android:id="@+id/switch_pod_detalle_finalizar_tarea"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="@string/completada"
-                        android:textSize="18sp"
-                        android:textColor="@color/colorWhite" />
-
-                </LinearLayout>
+                    android:layout_marginStart="15sp"/>
 
                 <LinearLayout
                     android:id="@+id/linearlayout_pod_detalle_finalizar_tarea"
