--- a/app/src/main/res/layout/activity_maquinas_detalle.xml
+++ b/app/src/main/res/layout/activity_maquinas_detalle.xml
@@ -55,7 +55,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/gesti_n_de_equipos"
+                        android:text="@string/listado_de_equipos"
                         android:textAlignment="center"
                         android:textColor="@color/colorWhite"
                         android:textSize="18sp" />
@@ -109,6 +109,9 @@
             </LinearLayout>
         </LinearLayout>
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <LinearLayout
                 android:id="@+id/linearlayout_maquinas_detalle_informacion_view"
                 android:layout_width="match_parent"
@@ -218,7 +221,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="15sp"
-                        android:text="WORKERS"
+                        android:text="@string/operadores_autorizados"
                         android:textColor="@color/colorWhite" />
 
                     <TextView
@@ -234,7 +237,11 @@
 
 
             </LinearLayout>
+        </ScrollView>
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <LinearLayout
                 android:id="@+id/linearlayout_maquinas_detalle_documentos_view"
                 android:layout_width="match_parent"
@@ -247,6 +254,17 @@
                 android:layout_marginLeft="20dp"
                 android:background="@drawable/rounded_button_blue">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/no_hay_documentos"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/colorWhite"
+                    android:layout_marginBottom="12sp"
+                    android:layout_marginTop="12sp"
+                    android:textSize="14sp"/>
+
+                <!-- Acá va el listview custom para documentos
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="50sp"
@@ -307,8 +325,10 @@
                         android:text="@string/documento"/>
 
                 </LinearLayout>
+                -->
 
             </LinearLayout>
+        </ScrollView>
 
     </LinearLayout>
 
