--- a/app/src/main/res/layout/activity_personas_detalle.xml
+++ b/app/src/main/res/layout/activity_personas_detalle.xml
@@ -55,7 +55,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/gesti_n_de_personas"
+                        android:text="@string/listado_de_personal"
                         android:textAlignment="center"
                         android:textColor="@color/colorWhite"
                         android:textSize="18sp" />
@@ -113,6 +113,9 @@
             </LinearLayout>
         </LinearLayout>
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <LinearLayout
                 android:id="@+id/linearlayout_personas_detalle_informacion_view"
                 android:layout_width="match_parent"
@@ -194,7 +197,11 @@
                 </LinearLayout>
 
             </LinearLayout>
+        </ScrollView>
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
             <LinearLayout
                 android:id="@+id/linearlayout_personas_detalle_documentos_view"
                 android:layout_width="match_parent"
@@ -207,6 +214,17 @@
                 android:layout_marginLeft="20dp"
                 android:background="@drawable/rounded_button_blue">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/no_hay_documentos"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="@color/colorWhite"
+                    android:layout_marginBottom="12sp"
+                    android:layout_marginTop="12sp"
+                    android:textSize="14sp"/>
+
+                <!-- Acá va el listview custom para documentos
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="50sp"
@@ -267,8 +285,9 @@
                         android:text="@string/documento"/>
 
                 </LinearLayout>
-
+                -->
             </LinearLayout>
+        </ScrollView>
 
     </LinearLayout>
 
