--- a/app/src/main/res/layout/activity_pod_detalle.xml
+++ b/app/src/main/res/layout/activity_pod_detalle.xml
@@ -98,10 +98,10 @@
                     android:layout_marginRight="15sp">
 
                     <TextView
-                        android:id="@+id/textview_pod_detalle_ito"
+                        android:id="@+id/textview_pod_detalle_descripcion"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/ito"
+                        android:text="@string/descripci_n"
                         android:textColor="@color/colorWhite" />
 
                     <TextView
