--- a/app/src/main/res/layout/activity_maquinas.xml
+++ b/app/src/main/res/layout/activity_maquinas.xml
@@ -67,13 +67,26 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:gravity="end">
+                    <Button
+                        android:id="@+id/button_maquinas_filter"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginEnd="10dp"
+                        android:background="@drawable/ic_filter" />
 
                 </LinearLayout>
 
             </LinearLayout>
 
         </androidx.appcompat.widget.Toolbar>
+
+    <LinearLayout
+        android:id="@+id/linearlayout_maquinas_filters"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/edittext_maquinas_busqueda"
@@ -121,6 +134,8 @@
                 android:background="@drawable/busqueda" />
 
         </LinearLayout>
+
+    </LinearLayout>
 
 
         <ListView
