--- a/app/src/main/res/layout/activity_pod.xml
+++ b/app/src/main/res/layout/activity_pod.xml
@@ -65,7 +65,15 @@
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1">
+                    android:layout_weight="1"
+                    android:gravity="end">
+
+                    <Button
+                        android:id="@+id/button_pod_filter"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginEnd="10dp"
+                        android:background="@drawable/ic_filter" />
 
                 </LinearLayout>
 
@@ -73,6 +81,11 @@
 
         </androidx.appcompat.widget.Toolbar>
 
+    <LinearLayout
+        android:id="@+id/linearlayout_pod_filters"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <EditText
                 android:id="@+id/edittext_pod_busqueda"
@@ -141,6 +154,8 @@
                     android:background="@drawable/busqueda" />
 
             </LinearLayout>
+
+    </LinearLayout>
 
         <ListView
                 android:id="@+id/listview_pod"
